# gazebo_modelo_carrinho

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  package.xml
config/: joint_limits.yml  joint_names_modelo_carrinho.yaml  motor_drive.yml
launch/: display.launch  gazebo.launch  spawn_robot.launch
meshes/: arduino_link.stl  base_link.stl  line3_link.stl  motordireito_link.stl  motoresquerdo_link.stl  rodadireita_link.STL  rodaesquerda_link.STL  sensor1_link.stl  sensor3_link.STL  sonar_link.stl
models/gazebo_modelo_carrinho/meshes/: arduino_link.stl  base_link.stl  bateria_link.stl  sonar_link.stl
models/modelo_carrinho/: model.config  model.sdf
models/modelo_carrinho/meshes/: bateria_link.stl  line1_link.stl  line2_link.stl  motordireito_link.stl  motoresquerdo_link.stl  sensor4_link.stl  sensor5_link.stl
models/pista/: model.config  model.sdf
models/pista/meshes/: base_link.stl  base_trilha.stl  bordas2_link.stl  parede_link.stl  trilha2_link.stl
models/pista_pro/: model.config  model.sdf
models/pista_pro/meshes/: track_visual.stl
plugins/include/: line_sensor_plugin.h
plugins/src/: line_sensor_plugin.cpp
scripts/: keyboard_node.py
urdf/: colors.xacro  modelo_carrinho.csv  modelo_carrinho.gazebo  modelo_carrinho.urdf  modelo_carrinho.xacro  motor.xacro
urdf/sensors/: line.sensor  ultrasonic.sensor
worlds/: pista.world  pista_pro.world
