<package format="2">
  <name>modelo_carrinho</name>

  <version>1.0.0</version>

  <description>
    <p>URDF Description package for modelo_carrinho</p>
    <p>This package contains configuration data, 3D models and launch files
for modelo_carrinho robot</p>
  </description>

  <author>Felipe Gomes de Melo</author>
  <author>Thalles Carneiro</author>

  <maintainer email="felipegmelo@usp.br" />

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>velocity_controllers</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-pygame</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
