<package format="2">
  <name>modelo_carrinho</name>

  <version>1.0.0</version>

  <description>
    <p>URDF Description package for modelo_carrinho</p>
    <p>This package contains configuration data, 3D models and launch files
for modelo_carrinho robot</p>
  </description>

  <maintainer email="felipegmelo@usp.br">Felipe Gomes de Melo</maintainer>
  <maintainer email="lucas.haug@thunderatz.org">Thalles Carneiro</maintainer>
  <maintainer email="thalles.carneiro@thunderatz.org">Lucas Haug</maintainer>
  <maintainer email="lucas.schneider@thunderatz.org">Lucas Schneider</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>velocity_controllers</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-pygame</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
